--- a/main.bib
+++ b/main.bib
@@ -127,4 +127,16 @@ url = "http://pdxscholar.library.pdx.edu/open_access_etds/1370/",
   note = {Accessed: 2017-07-03}
 }
 
+@book{nist,
+author        = {E.W. Lemmon and M.O. McLinden and D.G. Friend},
+  title         = {``Thermophysical Properties of Fluid Systems" in NIST Chemistry WebBook, NIST Standard Reference Database Number 69},
+  editor={P.J. Linstrom, W.G. Mallard},
+  publisher={ National Institute of Standards and Technology},
+  address={Gaithersburg MD, 20899},
+  doi={doi:10.18434/T4D303},
+  howpublished = {\url{http://pruffle.mit.edu/~ccarter/8b/Lecture_08/Lecture_08.html#eq:ltde}},
+  note = {Accessed: 2017-07-13}
+  }
+
+
 
